--- a/templates/main.html
+++ b/templates/main.html
@@ -7,6 +7,7 @@
 <link rel="stylesheet" href="../node_modules/x-chrome-tabs/src/css/base.min.css"/>
 <link rel="stylesheet" href="../css/main.css"/>
 <link rel="stylesheet" href="../css/tree.css"/>
+<link rel="stylesheet" href="../lib/codemirror.css"/>
 <body>
 <!-- All of the Node.js APIs are available in this renderer process. -->
 <!--We are using Node.js <script>document.write(process.versions.node)</script>,
@@ -30,7 +31,12 @@ and Electron <script>document.write(process.versions.electron)</script>.
         <div id="open_file_path" hidden></div>
     </div>
 </div>
+
 <script>
+
+
+
+
     // You can also require other files to run in this process
     require('../renderer.js')
 
