--- a/templates/new_tab.html
+++ b/templates/new_tab.html
@@ -3,8 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <link rel="stylesheet" href="../lib/codemirror.css">
-    <script src="../lib/codemirror.js"></script>
+    <link rel="stylesheet" href="../lib/night.css">
 
+    <script src="../lib/codemirror.js"></script>
+    <script src="../lib/perl.js"></script>
 </head>
 <body>
 <!-- All of the Node.js APIs are available in this renderer process. -->
@@ -17,7 +19,19 @@ and Electron <script>document.write(process.versions.electron)</script>.
           cols="85"
           style="resize: none"
           id="main-text"></textarea>
+
+<script src="../lib/codemirror.js" type="text/javascript"></script>
+<script src="../lib/perl.js" type="text/javascript"></script>
+
 <script LANGUAGE="JavaScript">
+
+    var editor = CodeMirror.fromTextArea(document.getElementById("main-text"), {
+        lineNumbers: true,
+        mode:  "Perl",
+        theme: "night",
+
+    });
+
     function getParams() {
         var idx = document.URL.indexOf('?');
         var params = new Array();
