--- a/templates/main.html
+++ b/templates/main.html
@@ -10,6 +10,7 @@
 <link rel="stylesheet" href="../lib/night.css">
 <link rel="stylesheet" href="https://code.jquery.com/ui/1.12.1/themes/base/jquery-ui.css">
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/jstree/3.2.1/themes/default/style.min.css"/>
+<link rel="stylesheet" href="API.css"/>
 
 <script>if (typeof module === 'object') {
     window.module = module;
@@ -35,6 +36,25 @@ and Electron <script>document.write(process.versions.electron)</script>.
 <div class="wrapper">
     <div class="tree-wrapper"></div>
     <div class="main-wrapper">
+	<div id="myModal" class="modal">
+
+  <!-- Modal content -->
+  <div class="modal-content">
+    <span class="close">&times;</span>
+		API Name/Path:<br><input type="text" id="api_full_path" style="width:100%"><br>
+		<br>
+		Supported OS's:<br>
+		<input type="checkbox" id="api_all_os_support" checked>All OS's<br>
+		<input type="checkbox">RH Family<br>
+		<input type="checkbox">RH 7.2<br>
+		<input type="checkbox">Ubuntu Family<br>
+		<input type="checkbox">Fedora 21<br>
+		<br>
+		<button type="submit" value="Submit" onclick="createApi()">Create</button>
+  </div>
+
+</div>
+
         <div id="tabs">
             <ul class="tabs-nav"></ul>
         </div>
@@ -132,7 +152,15 @@ and Electron <script>document.write(process.versions.electron)</script>.
         var tab = $('.ui-tabs-active');
         var tabId = tab.find('a').attr('href').replace('#', '');
         saveFile(tabId);
-        close_tab(tabId);
+        //close_tab(tabId);
+    });
+	
+	ipcRenderer.on('createApiTemplate', (event, arg) => {
+        createApiTemplate();
+    });
+	
+	ipcRenderer.on('createStepTemplate', (event, arg) => {
+        createStepTemplate();
     });
 
 
@@ -287,6 +315,70 @@ and Electron <script>document.write(process.versions.electron)</script>.
             }
         });
     });
+	
+	
+	function createApiTemplate()
+	{
+		//alert("API");
+		// Get the modal
+		var modal = document.getElementById('myModal');
+		
+		// Get the <span> element that closes the modal
+		var span = document.getElementsByClassName("close")[0];
+
+		// When the user clicks on the button, open the modal 
+		modal.style.display = "block";
+
+		
+	}
+	var modal = document.getElementById('myModal');
+	var span = document.getElementsByClassName("close")[0];
+	// When the user clicks on <span> (x), close the modal
+	span.onclick = function() {
+		modal.style.display = "none";
+	}
+	// When the user clicks anywhere outside of the modal, close it
+	window.onclick = function(event) {
+		if (event.target == modal) {
+			modal.style.display = "none";
+		}
+	}
+	
+	function createApi()
+	{
+		var api_full_path = document.getElementById('api_full_path').value;
+		//alert(api_full_path);
+		var modal = document.getElementById('myModal');
+		modal.style.display = "none";
+		
+		//$host->api->shell->hypervisor->vfs->bus->show_max_allowed_vfs($bus_number)
+		
+		api_file_name = "";
+		
+		if (api_full_path === undefined) {
+			alert("No API name entered");
+			return;
+		}
+
+		fs.writeFile(api_file_name, "", function (err) {
+			if (err) {
+				dialog.showErrorBox("File Save Error", err.message);
+				return;
+			}
+			alert("The file has been succesfully created");
+
+		});
+		//append to file;
+		
+		readFile(api_file_name);
+		
+	}
+	
+	
+	function createStepTemplate()
+	{
+		alert("STEP");
+	}
 </script>
 </body>
 </html>
