--- a/templates/main.html
+++ b/templates/main.html
@@ -3,46 +3,51 @@
 <head>
     <meta charset="UTF-8">
     <title>IDE</title>
-	<link href="../css/jqueryFileTree.css" rel="stylesheet" type="text/css"media="screen" />
+    <link href="../css/jqueryFileTree.css" rel="stylesheet" type="text/css" media="screen"/>
 
-<link rel="stylesheet" href="../css/main.css"/>
-<link rel="stylesheet" href="../lib/codemirror.css"/>
-<link rel="stylesheet" href="../lib/night.css">
-<link rel="stylesheet" href="https://code.jquery.com/ui/1.12.1/themes/base/jquery-ui.css">
-<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/jstree/3.2.1/themes/default/style.min.css"/>
+    <link rel="stylesheet" href="../css/main.css"/>
+    <link rel="stylesheet" href="../lib/codemirror.css"/>
+    <link rel="stylesheet" href="../lib/night.css">
+    <link rel="stylesheet" href="https://code.jquery.com/ui/1.12.1/themes/base/jquery-ui.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/jstree/3.2.1/themes/default/style.min.css"/>
 
-<script>if (typeof module === 'object') {
-    window.module = module;
-    module = undefined;
-}</script>
-<script src="https://code.jquery.com/jquery-1.12.4.js"></script>
-<!-- Insert this line after script imports -->
-<script>if (window.module) module = window.module;</script>
+    <script>if (typeof module === 'object') {
+        window.module = module;
+        module = undefined;
+    }</script>
+    <script src="https://code.jquery.com/jquery-1.12.4.js"></script>
+    <!-- Insert this line after script imports -->
+    <script>if (window.module) module = window.module;</script>
 
-<link rel="stylesheet" href="../node_modules/x-chrome-tabs/src/css/base.min.css"/>
-<link rel="stylesheet" href="../css/main.css"/>
-</head>
-<link rel="stylesheet" href="../css/main.css"/>
-<link rel="stylesheet" href="../css/jqueryFileTree.css"/>
-<link rel="stylesheet" href="../lib/codemirror.css"/>
-<link rel="stylesheet" href="../lib/night.css">
-<link rel="stylesheet" href="https://code.jquery.com/ui/1.12.1/themes/base/jquery-ui.css">
-<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/jstree/3.2.1/themes/default/style.min.css"/>
+    <link rel="stylesheet" href="../node_modules/x-chrome-tabs/src/css/base.min.css"/>
+    <link rel="stylesheet" href="../css/main.css"/>
+    <link rel="stylesheet" href="../css/main.css"/>
+    <link rel="stylesheet" href="../css/jqueryFileTree.css"/>
+    <link rel="stylesheet" href="../lib/codemirror.css"/>
+    <link rel="stylesheet" href="../lib/night.css">
+    <link rel="stylesheet" href="https://code.jquery.com/ui/1.12.1/themes/base/jquery-ui.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/jstree/3.2.1/themes/default/style.min.css"/>
 
-<script>if (typeof module === 'object') {
-    window.module = module;
-    module = undefined;
-}</script>
-<script src="https://code.jquery.com/jquery-1.12.4.js"></script>
-<!-- Insert this line after script imports -->
-<script>if (window.module) module = window.module;</script>
+    <script>
+        if (typeof module === 'object') {
+            window.module = module;
+            module = undefined;
+        }
+    </script>
+    <script src="https://code.jquery.com/jquery-1.12.4.js"></script>
+    <!-- Insert this line after script imports -->
+    <script>
+        if (window.module) {
+            module = window.module;
+        }
+    </script>
 
-<script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/jstree/3.2.1/jstree.min.js"></script>
-<script src="https://cdn.jsdelivr.net/npm/lodash@4.17.10/lodash.min.js"></script>
+    <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jstree/3.2.1/jstree.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/lodash@4.17.10/lodash.min.js"></script>
 
-<script src="../lib/codemirror.js"></script>
-<script src="../lib/perl.js"></script>
+    <script src="../lib/codemirror.js"></script>
+    <script src="../lib/perl.js"></script>
 </head>
 <body>
 <!-- All of the Node.js APIs are available in this renderer process. -->
@@ -303,7 +308,7 @@ and Electron <script>document.write(process.versions.electron)</script>.
 
         $('.ui-tabs-panel.ui-widget-content').each(function () {
             var tabID = $(this).attr('id');
-            var file = $('a[href="#'+tabID+'"]').attr('data-file-name');
+            var file = $('a[href="#' + tabID + '"]').attr('data-file-name');
 
             var editor = $(this).find('.CodeMirror');
             var lines = [];
