--- a/css/main.css
+++ b/css/main.css
@@ -158,3 +158,7 @@ jstree-default .jstree-node, .jstree-default .jstree-icon {
 .editor-wrap {
     height: calc(100vh - 113px);
 }
+
+.jstree-default .jstree-anchor .jstree-icon:empty {
+	display: none;
+}
