--- a/css/main.css
+++ b/css/main.css
@@ -92,8 +92,16 @@
 
 
 jstree-default .jstree-node, .jstree-default .jstree-icon {
+    background-image: url("https://vignette.wikia.nocookie.net/tlos-huggers/images/5/5e/Default.png/revision/latest?cb=20160816122145") !important;
+	font-style: normal;
+	background-position: center !important;
+
+}
+jstree-icon jstree-ocl {
     background-image: url("https://www.download3k.com/images/icon.gif?v=2") !important;
 	font-style: normal;
+	background-position: center !important;
+	background-size: cover;
 
 }
 
@@ -109,7 +117,6 @@ jstree-default .jstree-node, .jstree-default .jstree-icon {
     list-style-type: none;
     list-style-image: none;
     font-size: medium;
->>>>>>> Stashed changes
 }
 
 #tabs .tabs-nav {
