--- a/css/main.css
+++ b/css/main.css
@@ -106,7 +106,7 @@ jstree-default .jstree-node, .jstree-default .jstree-icon {
 	background-position: center !important;
 
 }
-jstree-icon jstree-ocl {
+.jstree-node>.jstree-closed>.jstree-icon>.jstree-ocl {
     background-image: url("https://www.download3k.com/images/icon.gif?v=2") !important;
 	font-style: normal;
 	background-position: center !important;
