--- a/css/main.css
+++ b/css/main.css
@@ -2,52 +2,50 @@
     width: 100%;
     height: 100%;
     background-color: white;
-	font: red;
-	font-size: 20px;
-}
-
-#debug-area
-{
-	position: fixed;
-	width: calc(100% - 300px);
-	height: 200px;
+    font: red;
     font-size: 20px;
-	background-color: black;
-	color : white;
-    bottom: 0;
-	right: 0;
 }
 
+#debug-area {
+    position: fixed;
+    width: calc(100% - 300px);
+    height: 200px;
+    font-size: 20px;
+    background-color: black;
+    color: white;
+    bottom: 0;
+    right: 0;
+}
 
 .tree-wrapper {
     width: 300px;
     float: left;
     font-size: 20px;
-	background-color: white;
+    background-color: white;
 }
 
 .main-wrapper {
-	position: fixed;
+    position: fixed;
     width: calc(100% - 300px);
     float: left;
-    color : red;
-	border: black;
-	right: 0;
+    color: red;
+    border: black;
+    right: 0;
 }
 
 #tabs .tabs-nav {
-	background-color : white;
-	border: black;
-	padding: 0;
-	font-size: small;
+    background-color: white;
+    border: black;
+    padding: 0;
+    font-size: small;
 }
 
 #tabs .tabs-nav a {
     position: relative;
     padding-right: 30px;
-	background-color: gainsboro;
-	color: black;
-	max-width: 125px;
+    background-color: gainsboro;
+    color: black;
+    max-width: 125px;
     overflow: hidden;
 
 }
@@ -56,7 +54,7 @@
     margin-bottom: -1px;
     padding-bottom: 1px;
     background-color: grey;
-	font-size: small;
+    font-size: small;
 }
 
 .ui-tabs .ui-tabs-panel {
@@ -94,29 +92,20 @@
 
 .editor-wrap {
     height: calc(100vh - 113px - 165px);
-	font-size: medium;
-	font-style: italic;
+    font-size: medium;
+    font-style: italic;
 }
 
-
-
-jstree-default .jstree-node, .jstree-default .jstree-icon {
-    background-image: url("https://vignette.wikia.nocookie.net/tlos-huggers/images/5/5e/Default.png/revision/latest?cb=20160816122145") !important;
-	font-style: normal;
-	background-position: center !important;
-
-}
-.jstree-node>.jstree-closed>.jstree-icon>.jstree-ocl {
-    background-image: url("https://www.download3k.com/images/icon.gif?v=2") !important;
-	font-style: normal;
-	background-position: center !important;
-	background-size: cover;
-
-}
-
-.jstree-default .jstree-leaf>.jstree-ocl {
-	background-size: 85%;
+.jstree-node:not(.jstree-leaf) > .jstree-ocl {
+    background-size: contain !important;
     background-position: center !important;
+    background-image: url("https://www.download3k.com/images/icon.gif?v=2") !important;
+}
+
+.jstree-node.jstree-leaf > .jstree-ocl {
+    background-size: contain !important;
+    background-position: center !important;
+    background-image: url("https://vignette.wikia.nocookie.net/tlos-huggers/images/5/5e/Default.png/revision/latest?cb=20160816122145") !important;
 }
 
 .jstree-node, .jstree-children, .jstree-container-ul {
@@ -176,5 +165,12 @@ jstree-default .jstree-node, .jstree-default .jstree-icon {
 }
 
 .jstree-default .jstree-anchor .jstree-icon:empty {
-	display: none;
+    display: none;
+}
+
+.jstree-default .jstree-anchor {
+    max-width: 100px;
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
 }
