--- a/templates/main.html
+++ b/templates/main.html
@@ -86,7 +86,7 @@ and Electron <script>document.write(process.versions.electron)</script>.
             <ul class="tabs-nav"></ul>
         </div>
     </div>
-	<div id="debug-area">Debug Area</div>
+	<div id="debug-area"></div>
 </div>
 
 <script>
@@ -132,7 +132,7 @@ and Electron <script>document.write(process.versions.electron)</script>.
         );
         $("div#tabs").append(
             "<div id='tab" + tabId + "'>" +
-            "<div class='editor-wrap'><textarea rows='30' style='resize: none' id='tab" + tabId + "-textarea'></textarea></div>' " +
+            "<div class='editor-wrap'><textarea rows='60' style='resize: none' id='tab" + tabId + "-textarea'></textarea></div>' " +
             "</div>"
         );
 
